--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,16 @@
 			<version>1.1.0</version>
 		</dependency>
 		<dependency>
+			<groupId>com.typesafe.play</groupId>
+			<artifactId>play-json_2.10</artifactId>
+			<version>2.4.0-M2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.typesafe.play</groupId>
+			<artifactId>play-iteratees_2.10</artifactId>
+			<version>2.4.0-M1</version>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-sql_2.10</artifactId>
 			<version>1.1.0</version>
