--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,7 @@
 		<dependency>
 			<groupId>com.typesafe.play</groupId>
 			<artifactId>play-iteratees_2.10</artifactId>
-			<version>2.4.0-M1</version>
+			<version>2.4.0-M2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.spark</groupId>
@@ -99,17 +99,13 @@
 		</dependency>
 		<!-- <dependency> <groupId>org.apache.hadoop</groupId> <artifactId>hadoop-client</artifactId> 
 			<version>1.0.4</version> </dependency> -->
-		<dependency>
-			<groupId>com.typesafe.play</groupId>
-			<artifactId>play-json_2.10</artifactId>
-			<version>2.4.0-M2</version>
-		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.scala-tools</groupId>
 				<artifactId>maven-scala-plugin</artifactId>
+				<version>2.15.2</version>
 				<executions>
 					<execution>
 						<goals>
@@ -121,7 +117,7 @@
 				<configuration>
 					<sourceDir>src/main/java</sourceDir>
 					<jvmArgs>
-						<jvmArg>-Xms3g</jvmArg>
+						<jvmArg>-Xms1g</jvmArg>
 						<jvmArg>-Xmx3g</jvmArg>
 					</jvmArgs>
 				</configuration>
