--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,12 @@
 			<version>2.0.2</version> </dependency> -->
 		<dependency>
 			<groupId>org.elasticsearch</groupId>
+			<artifactId>elasticsearch-spark_2.10</artifactId>
+			<version>2.1.0.Beta3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.elasticsearch</groupId>
 			<artifactId>elasticsearch-hadoop-cascading</artifactId>
 			<version>2.0.2</version>
 		</dependency>
