--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,6 @@
 	<version>1.0-SNAPSHOT</version>
 	<name>Spark for all projects</name>
 	<url>http://scala-lang.org</url>
-	<repositories>
-		<!-- <repository> <id>scala-tools.org</id> <name>Scala-tools Maven2 Repository</name> 
-			<url>http://scala-tools.org/repo-releases</url> </repository> <repository> 
-			<id>conjars.org</id> <url>http://conjars.org/repo</url> </repository> -->
-	</repositories>
 	<pluginRepositories>
 		<pluginRepository>
 			<id>scala-tools.org</id>
@@ -19,7 +14,6 @@
 			<url>http://scala-tools.org/repo-releases</url>
 		</pluginRepository>
 	</pluginRepositories>
-	<dependencies>
 		<!-- <dependency> <groupId>com.datastax.cassandra</groupId> <artifactId>cassandra-driver-core</artifactId> 
 			<version>2.1.2</version> </dependency> <dependency> <groupId>com.rabbitmq</groupId> 
 			<artifactId>amqp-client</artifactId> <version>3.3.4</version> </dependency> 
@@ -30,21 +24,25 @@
 			<artifactId>hadoop-common</artifactId> <version>2.4.0</version> </dependency> 
 			<dependency> <groupId>org.elasticsearch</groupId> <artifactId>elasticsearch-hadoop</artifactId> 
 			<version>2.0.2</version> </dependency> -->
+		<!-- <dependency> <dependency> <groupId>org.elasticsearch</groupId> <artifactId>elasticsearch-hadoop</artifactId> 
+			<version>2.1.0.Beta3</version> </dependency> <groupId>cascading</groupId> 
+			<artifactId>cascading-local</artifactId> <version>2.5.6</version> </dependency> 
+			<dependency> <groupId>org.elasticsearch</groupId> <artifactId>elasticsearch-hadoop-mr</artifactId> 
+			<version>2.1.0.Beta3</version> </dependency> <dependency> <groupId>org.scalanlp</groupId> 
+			<artifactId>breeze_2.10</artifactId> <version>0.10</version> </dependency> 
+			<dependency> <groupId>org.apache.spark</groupId> <artifactId>spark-hive_2.10</artifactId> 
+			<version>1.2.0</version> </dependency> <dependency> <groupId>org.apache.spark</groupId> 
+			<artifactId>spark-graphx_2.10</artifactId> <version>1.2.0</version> </dependency> -->
+	<dependencies>
 		<dependency>
 			<groupId>org.elasticsearch</groupId>
 			<artifactId>elasticsearch-spark_2.10</artifactId>
 			<version>2.1.0.Beta3</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.elasticsearch</groupId>
 			<artifactId>elasticsearch-hadoop-cascading</artifactId>
 			<version>2.0.2</version>
-		</dependency>
-		<dependency>
-			<groupId>org.scalanlp</groupId>
-			<artifactId>breeze_2.10</artifactId>
-			<version>0.10</version>
 		</dependency>
 		<dependency>
 			<groupId>org.scala-lang</groupId>
@@ -54,23 +52,12 @@
 		<dependency>
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-core_2.10</artifactId>
-			<version>1.1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.spark</groupId>
-			<artifactId>spark-hive_2.10</artifactId>
-			<version>1.1.0</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.apache.spark</groupId>
-			<artifactId>spark-graphx_2.10</artifactId>
-			<version>1.1.0</version>
+			<version>1.2.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-mllib_2.10</artifactId>
-			<version>1.1.0</version>
+			<version>1.2.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.typesafe.play</groupId>
@@ -85,12 +72,12 @@
 		<dependency>
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-sql_2.10</artifactId>
-			<version>1.1.0</version>
+			<version>1.2.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-streaming_2.10</artifactId>
-			<version>1.1.0</version>
+			<version>1.2.0</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -103,9 +90,8 @@
 			<artifactId>goose</artifactId>
 			<version>2.1.23</version>
 		</dependency>
-		<!-- <dependency> <groupId>org.apache.hadoop</groupId> <artifactId>hadoop-client</artifactId> 
-			<version>1.0.4</version> </dependency> -->
 	</dependencies>
+	<!--  
 	<build>
 		<plugins>
 			<plugin>
@@ -130,4 +116,5 @@
 			</plugin>
 		</plugins>
 	</build>
+	-->
 </project>
