--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,13 @@
 	<version>1.0-SNAPSHOT</version>
 	<name>Spark for all projects</name>
 	<url>http://scala-lang.org</url>
+	<repositories>
+		<repository>
+			<id>conjars.org</id>
+			<url>http://conjars.org/repo</url>
+		</repository>
+	</repositories>
+
 	<pluginRepositories>
 		<pluginRepository>
 			<id>scala-tools.org</id>
@@ -14,25 +21,30 @@
 			<url>http://scala-tools.org/repo-releases</url>
 		</pluginRepository>
 	</pluginRepositories>
-		<!-- <dependency> <groupId>com.datastax.cassandra</groupId> <artifactId>cassandra-driver-core</artifactId> 
-			<version>2.1.2</version> </dependency> <dependency> <groupId>com.rabbitmq</groupId> 
-			<artifactId>amqp-client</artifactId> <version>3.3.4</version> </dependency> 
-			<dependency> <groupId>org.elasticsearch</groupId> <artifactId>elasticsearch</artifactId> 
-			<version>1.3.2</version> </dependency> -->
-		<!--<dependency> <groupId>org.elasticsearch</groupId> <artifactId>elasticsearch-hadoop</artifactId> 
-			<version>2.0.2</version> </dependency> <dependency> <groupId>org.apache.hadoop</groupId> 
-			<artifactId>hadoop-common</artifactId> <version>2.4.0</version> </dependency> 
-			<dependency> <groupId>org.elasticsearch</groupId> <artifactId>elasticsearch-hadoop</artifactId> 
-			<version>2.0.2</version> </dependency> -->
-		<!-- <dependency> <dependency> <groupId>org.elasticsearch</groupId> <artifactId>elasticsearch-hadoop</artifactId> 
-			<version>2.1.0.Beta3</version> </dependency> <groupId>cascading</groupId> 
-			<artifactId>cascading-local</artifactId> <version>2.5.6</version> </dependency> 
-			<dependency> <groupId>org.elasticsearch</groupId> <artifactId>elasticsearch-hadoop-mr</artifactId> 
-			<version>2.1.0.Beta3</version> </dependency> <dependency> <groupId>org.scalanlp</groupId> 
-			<artifactId>breeze_2.10</artifactId> <version>0.10</version> </dependency> 
-			<dependency> <groupId>org.apache.spark</groupId> <artifactId>spark-hive_2.10</artifactId> 
-			<version>1.2.0</version> </dependency> <dependency> <groupId>org.apache.spark</groupId> 
-			<artifactId>spark-graphx_2.10</artifactId> <version>1.2.0</version> </dependency> -->
+	<!-- <dependency> <groupId>com.datastax.cassandra</groupId> <artifactId>cassandra-driver-core</artifactId> 
+		<version>2.1.2</version> </dependency> <dependency> <groupId>com.rabbitmq</groupId> 
+		<artifactId>amqp-client</artifactId> <version>3.3.4</version> </dependency> 
+		<dependency> <groupId>org.elasticsearch</groupId> <artifactId>elasticsearch</artifactId> 
+		<version>1.3.2</version> </dependency> -->
+	<!--<dependency> <groupId>org.elasticsearch</groupId> <artifactId>elasticsearch-hadoop</artifactId> 
+		<version>2.0.2</version> </dependency> <dependency> <groupId>org.apache.hadoop</groupId> 
+		<artifactId>hadoop-common</artifactId> <version>2.4.0</version> </dependency> 
+		<dependency> <groupId>org.elasticsearch</groupId> <artifactId>elasticsearch-hadoop</artifactId> 
+		<version>2.0.2</version> </dependency> -->
+	<!-- <dependency> <dependency> <groupId>org.elasticsearch</groupId> <artifactId>elasticsearch-hadoop</artifactId> 
+		<version>2.1.0.Beta3</version> </dependency> <groupId>cascading</groupId> 
+		<artifactId>cascading-local</artifactId> <version>2.5.6</version> </dependency> 
+		<dependency> <groupId>org.elasticsearch</groupId> <artifactId>elasticsearch-hadoop-mr</artifactId> 
+		<version>2.1.0.Beta3</version> </dependency> <dependency> <groupId>org.scalanlp</groupId> 
+		<artifactId>breeze_2.10</artifactId> <version>0.10</version> </dependency> 
+		<dependency> <groupId>org.apache.spark</groupId> <artifactId>spark-hive_2.10</artifactId> 
+		<version>1.2.0</version> </dependency> <dependency> <groupId>org.apache.spark</groupId> 
+		<artifactId>spark-graphx_2.10</artifactId> <version>1.2.0</version> </dependency> 
+		<dependency> <groupId>cascading</groupId> <artifactId>cascading-local</artifactId> 
+		<version>2.5.6</version> </dependency> <dependency> <groupId>cascading</groupId> 
+		<artifactId>cascading-hadoop</artifactId> <version>2.5.6</version> </dependency> 
+		<dependency> <groupId>org.elasticsearch</groupId> <artifactId>elasticsearch-hadoop-cascading</artifactId> 
+		<version>2.1.0.Beta3</version> </dependency> -->
 	<dependencies>
 		<dependency>
 			<groupId>org.elasticsearch</groupId>
@@ -41,8 +53,8 @@
 		</dependency>
 		<dependency>
 			<groupId>org.elasticsearch</groupId>
-			<artifactId>elasticsearch-hadoop-cascading</artifactId>
-			<version>2.0.2</version>
+			<artifactId>elasticsearch-hadoop</artifactId>
+			<version>2.1.0.Beta3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.scala-lang</groupId>
@@ -91,7 +103,7 @@
 			<version>2.1.23</version>
 		</dependency>
 	</dependencies>
-	<!--  
+	
 	<build>
 		<plugins>
 			<plugin>
@@ -116,5 +128,4 @@
 			</plugin>
 		</plugins>
 	</build>
-	-->
 </project>
