--- a/pom.xml
+++ b/pom.xml
@@ -44,20 +44,11 @@
 		<version>2.5.6</version> </dependency> <dependency> <groupId>cascading</groupId> 
 		<artifactId>cascading-hadoop</artifactId> <version>2.5.6</version> </dependency> 
 		<dependency> <groupId>org.elasticsearch</groupId> <artifactId>elasticsearch-hadoop-cascading</artifactId> 
-		<version>2.1.0.Beta3</version> </dependency>
-		
-		<dependency>
-			<groupId>org.apache.spark</groupId>
-			<artifactId>spark-hive_2.10</artifactId>
-			<version>1.2.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.elasticsearch</groupId>
-			<artifactId>elasticsearch-spark_2.10</artifactId>
-			<version>2.1.0.Beta3</version>
-		</dependency>
-		 -->
+		<version>2.1.0.Beta3</version> </dependency> <dependency> <groupId>org.apache.spark</groupId> 
+		<artifactId>spark-hive_2.10</artifactId> <version>1.2.0</version> </dependency> -->
 	<dependencies>
+		<!-- <dependency> <groupId>org.elasticsearch</groupId> <artifactId>elasticsearch-spark_2.10</artifactId> 
+			<version>2.1.0.Beta3</version> </dependency> -->
 		<dependency>
 			<groupId>org.elasticsearch</groupId>
 			<artifactId>elasticsearch-hadoop</artifactId>
@@ -68,13 +59,11 @@
 			<artifactId>scala-library</artifactId>
 			<version>2.10.4</version>
 		</dependency>
-		<!-- 
 		<dependency>
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-core_2.10</artifactId>
 			<version>1.2.0</version>
 		</dependency>
-		 -->
 		<dependency>
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-mllib_2.10</artifactId>
@@ -95,30 +84,26 @@
 			<artifactId>spark-sql_2.10</artifactId>
 			<version>1.2.0</version>
 		</dependency>
-	
-	<!--
 		<dependency>
-			<groupId>org.apache.spark</groupId>
-			<artifactId>spark-streaming_2.10</artifactId>
-			<version>1.2.0</version>
-		</dependency>
-	  	<dependency>
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-hive_2.10</artifactId>
 			<version>1.2.0</version>
 		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.10</version>
-			<scope>test</scope>
-		</dependency>
-	-->	
+		<!-- <dependency> <groupId>org.apache.spark</groupId> <artifactId>spark-streaming_2.10</artifactId> 
+			<version>1.2.0</version> </dependency> <dependency> <groupId>junit</groupId> 
+			<artifactId>junit</artifactId> <version>4.10</version> <scope>test</scope> 
+			</dependency> -->
 		<dependency>
 			<groupId>com.gravity</groupId>
 			<artifactId>goose</artifactId>
 			<version>2.1.23</version>
 		</dependency>
+		<!-- <dependency> <groupId>org.slf4j</groupId> <artifactId>log4j-over-slf4j</artifactId> 
+			<version>1.6.6</version> <exclusions> <exclusion> <groupId>org.slf4j</groupId> 
+			<artifactId>slf4j-log4j12</artifactId> </exclusion> <exclusion> <groupId>log4j</groupId> 
+			<artifactId>log4j</artifactId> </exclusion> </exclusions> </dependency> -->
+		<!-- <dependency> <groupId>org.scalanlp</groupId> <artifactId>chalk</artifactId> 
+			<version>1.3.0</version> </dependency> -->
 	</dependencies>
 
 	<build>
