--- a/pom.xml
+++ b/pom.xml
@@ -35,20 +35,18 @@
 		<version>2.1.0.Beta3</version> </dependency> <groupId>cascading</groupId> 
 		<artifactId>cascading-local</artifactId> <version>2.5.6</version> </dependency> 
 		<dependency> <groupId>org.elasticsearch</groupId> <artifactId>elasticsearch-hadoop-mr</artifactId> 
-		<version>2.1.0.Beta3</version> </dependency> <dependency> <groupId>org.scalanlp</groupId> 
-		<artifactId>breeze_2.10</artifactId> <version>0.10</version> </dependency> 
-		<dependency> <groupId>org.apache.spark</groupId> <artifactId>spark-hive_2.10</artifactId> 
-		<version>1.2.0</version> </dependency> <dependency> <groupId>org.apache.spark</groupId> 
+		<version>2.1.0.Beta3</version> </dependency>
+		 <dependency> <groupId>org.apache.spark</groupId> 
 		<artifactId>spark-graphx_2.10</artifactId> <version>1.2.0</version> </dependency> 
 		<dependency> <groupId>cascading</groupId> <artifactId>cascading-local</artifactId> 
 		<version>2.5.6</version> </dependency> <dependency> <groupId>cascading</groupId> 
 		<artifactId>cascading-hadoop</artifactId> <version>2.5.6</version> </dependency> 
 		<dependency> <groupId>org.elasticsearch</groupId> <artifactId>elasticsearch-hadoop-cascading</artifactId> 
-		<version>2.1.0.Beta3</version> </dependency> <dependency> <groupId>org.apache.spark</groupId> 
-		<artifactId>spark-hive_2.10</artifactId> <version>1.2.0</version> </dependency> -->
+		<version>2.1.0.Beta3</version> </dependency> -->
 	<dependencies>
 		<!-- <dependency> <groupId>org.elasticsearch</groupId> <artifactId>elasticsearch-spark_2.10</artifactId> 
 			<version>2.1.0.Beta3</version> </dependency> -->
+
 		<dependency>
 			<groupId>org.elasticsearch</groupId>
 			<artifactId>elasticsearch-hadoop</artifactId>
@@ -92,18 +90,17 @@
 		<!-- <dependency> <groupId>org.apache.spark</groupId> <artifactId>spark-streaming_2.10</artifactId> 
 			<version>1.2.0</version> </dependency> <dependency> <groupId>junit</groupId> 
 			<artifactId>junit</artifactId> <version>4.10</version> <scope>test</scope> 
-			</dependency> -->
+			</dependency> 
 		<dependency>
 			<groupId>com.gravity</groupId>
 			<artifactId>goose</artifactId>
 			<version>2.1.23</version>
-		</dependency>
+		</dependency> -->
 		<!-- <dependency> <groupId>org.slf4j</groupId> <artifactId>log4j-over-slf4j</artifactId> 
 			<version>1.6.6</version> <exclusions> <exclusion> <groupId>org.slf4j</groupId> 
 			<artifactId>slf4j-log4j12</artifactId> </exclusion> <exclusion> <groupId>log4j</groupId> 
 			<artifactId>log4j</artifactId> </exclusion> </exclusions> </dependency> -->
-		<!-- <dependency> <groupId>org.scalanlp</groupId> <artifactId>chalk</artifactId> 
-			<version>1.3.0</version> </dependency> -->
+		<!-- -->
 	</dependencies>
 
 	<build>
