--- a/pom.xml
+++ b/pom.xml
@@ -35,8 +35,7 @@
 		<version>2.1.0.Beta3</version> </dependency> <groupId>cascading</groupId> 
 		<artifactId>cascading-local</artifactId> <version>2.5.6</version> </dependency> 
 		<dependency> <groupId>org.elasticsearch</groupId> <artifactId>elasticsearch-hadoop-mr</artifactId> 
-		<version>2.1.0.Beta3</version> </dependency>
-		 <dependency> <groupId>org.apache.spark</groupId> 
+		<version>2.1.0.Beta3</version> </dependency> <dependency> <groupId>org.apache.spark</groupId> 
 		<artifactId>spark-graphx_2.10</artifactId> <version>1.2.0</version> </dependency> 
 		<dependency> <groupId>cascading</groupId> <artifactId>cascading-local</artifactId> 
 		<version>2.5.6</version> </dependency> <dependency> <groupId>cascading</groupId> 
@@ -90,17 +89,18 @@
 		<!-- <dependency> <groupId>org.apache.spark</groupId> <artifactId>spark-streaming_2.10</artifactId> 
 			<version>1.2.0</version> </dependency> <dependency> <groupId>junit</groupId> 
 			<artifactId>junit</artifactId> <version>4.10</version> <scope>test</scope> 
-			</dependency> 
-		<dependency>
-			<groupId>com.gravity</groupId>
-			<artifactId>goose</artifactId>
-			<version>2.1.23</version>
-		</dependency> -->
+			</dependency> <dependency> <groupId>com.gravity</groupId> <artifactId>goose</artifactId> 
+			<version>2.1.23</version> </dependency> -->
 		<!-- <dependency> <groupId>org.slf4j</groupId> <artifactId>log4j-over-slf4j</artifactId> 
 			<version>1.6.6</version> <exclusions> <exclusion> <groupId>org.slf4j</groupId> 
 			<artifactId>slf4j-log4j12</artifactId> </exclusion> <exclusion> <groupId>log4j</groupId> 
 			<artifactId>log4j</artifactId> </exclusion> </exclusions> </dependency> -->
 		<!-- -->
+		<dependency>
+			<groupId>net.sourceforge.htmlunit</groupId>
+			<artifactId>htmlunit</artifactId>
+			<version>2.15</version>
+		</dependency>
 	</dependencies>
 
 	<build>
