--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,7 @@
 			<groupId>org.scala-lang</groupId>
 			<artifactId>scala-library</artifactId>
 			<version>2.10.4</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.spark</groupId>
@@ -65,6 +66,7 @@
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-mllib_2.10</artifactId>
 			<version>1.3.0</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.typesafe.play</groupId>
@@ -80,11 +82,13 @@
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-sql_2.10</artifactId>
 			<version>1.3.0</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-hive_2.10</artifactId>
 			<version>1.3.0</version>
+			<scope>provided</scope>
 		</dependency>
 		<!-- <dependency> <groupId>org.apache.spark</groupId> <artifactId>spark-streaming_2.10</artifactId> 
 			<version>1.2.0</version> </dependency> <dependency> <groupId>junit</groupId> 
