--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,18 @@
 			<artifactId>htmlunit</artifactId>
 			<version>2.15</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.spark</groupId>
+			<artifactId>spark-streaming_2.10</artifactId>
+			<version>1.3.0</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.spark</groupId>
+			<artifactId>spark-streaming-kafka_2.10</artifactId>
+			<version>1.3.0</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
