--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,12 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+			<groupId>com.datastax.spark</groupId>
+			<artifactId>spark-cassandra-connector_2.10</artifactId>
+			<version>1.2.0</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
