--- a/pom.xml
+++ b/pom.xml
@@ -135,12 +135,26 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-	<!--  	<dependency>
+		<dependency>
+			<groupId>org.apache.cassandra</groupId>
+			<artifactId>cassandra-thrift</artifactId>
+			<version>2.1.5</version>
+		</dependency>
+		<dependency>
 			<groupId>com.datastax.spark</groupId>
 			<artifactId>spark-cassandra-connector_2.10</artifactId>
-			<version>1.2.0</version>
+			<version>1.3.0-M1</version>
 		</dependency>
--->
+		<dependency>
+			<groupId>org.apache.cassandra</groupId>
+			<artifactId>cassandra-clientutil</artifactId>
+			<version>2.1.5</version>
+		</dependency>
+		<dependency>
+			<groupId>com.datastax.cassandra</groupId>
+			<artifactId>cassandra-driver-core</artifactId>
+			<version>2.1.5</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
