--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,11 @@
 	</pluginRepositories>
 
 	<dependencies>
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.8.1</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.elasticsearch</groupId>
