--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,12 @@
 			<artifactId>cassandra-driver-core</artifactId>
 			<version>2.1.5</version>
 		</dependency>
+		<dependency>
+	<groupId>org.apache.kafka</groupId>
+	<artifactId>kafka-clients</artifactId>
+	<version>0.8.2.1</version>
+</dependency>
+		
 	</dependencies>
 	<build>
 		<plugins>
