--- a/pom.xml
+++ b/pom.xml
@@ -116,7 +116,7 @@
 		<dependency>
 			<groupId>com.datastax.spark</groupId>
 			<artifactId>spark-cassandra-connector_2.10</artifactId>
-			<version>1.3.0-M1</version>
+			<version>1.3.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.cassandra</groupId>
@@ -127,7 +127,7 @@
 			<groupId>com.datastax.cassandra</groupId>
 			<artifactId>cassandra-driver-core</artifactId>
 			<version>2.1.5</version>
-		</dependency>		
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
